filter java controller modified